@@ -37,6 +37,12 @@ module Druid
       end
     end
 
+    def expected_element(element_name)
+      define_method("has_expected_element?") do
+        self.respond_to? "#{element_name}?"
+      end
+    end
+
     #
     # Identify an element as existing within a frame or iframe.
     #
