@@ -5,6 +5,7 @@ class AccessorsTestDruid
 
   page_url "http://apple.com"
   expected_title "Expected Title"
+  expected_element :google_search
   link(:google_search, :link => 'Google Search')
   text_field(:first_name, :id => 'first_name')
   select_list(:state, :id => 'state')
@@ -148,6 +149,21 @@ describe Druid::Accessors do
     it "should raise error when it does not have expected title" do
       expect(driver).to receive(:title).twice.and_return("Not Expected")
       expect {druid.has_expected_title? }.to raise_error
+    end
+  end
+
+  describe "validating the existence of an element" do
+    it "should validate an element exists" do
+      allow(druid).to receive(:google_search?).and_return(driver)
+      druid.has_expected_element?
+    end
+
+    it "should handle non-existent elements gracefully" do
+      class FakePage
+        include Druid
+        expected_element :foo
+      end
+      expect(FakePage.new(driver)).not_to have_expected_element
     end
   end
 
